===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.15.0]]
==== 1.15.0 - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Gracefully abort agent init when running on a known Java 8 buggy JVM {pull}1075[#1075].

* Add support for <<supported-databases, Redis Redisson client>>

[float]
===== Bug fixes
* When JAX-RS-annotated method delegates to another JAX-RS-annotated method, transaction name should include method A - {pull}1062[#1062]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.14.0]]
==== 1.14.0 - 2020/03/04

[float]
===== Features

* Support for the official https://www.w3.org/TR/trace-context[W3C] `traceparent` and `tracestate` headers. +
  The agent now accepts both the `elastic-apm-traceparent` and the official `traceparent` header.
By default, it sends both headers on outgoing requests, unless <<config-use-elastic-traceparent-header, `use_elastic_traceparent_header`>> is set to false.
* Creating spans for slow methods with the help of the sampling profiler https://github.com/jvm-profiling-tools/async-profiler[async-profiler].
This is a low-overhead way of seeing which methods make your transactions slow and a replacement for the `trace_methods` configuration option.
See <<supported-java-methods>> for more details
* Adding a Circuit Breaker to pause the agent when stress is detected on the system and resume when the stress is relieved.
See <<circuit-breaker>> and {pull}1040[#1040] for more info.
* `Span#captureException` and `Transaction#captureException` in public API return reported error id - {pull}1015[#1015]

[float]
===== Bug fixes

* java.lang.IllegalStateException: Cannot resolve type description for <com.another.commercial.apm.agent.Class> - {pull}1037[#1037]
* properly handle `java.sql.SQLException` for unsupported JDBC features {pull}[#1035] https://github.com/elastic/apm-agent-java/issues/1025[#1025]
