@@ -80,7 +80,7 @@ class InstrumentationTest {
     }
 
     @Test
-    void testReInit() {
+    void testReInitEnableOneInstrumentation() {
         final ConfigurationRegistry config = SpyConfiguration.createSpyConfig();
         CoreConfiguration configConfig = config.getConfig(CoreConfiguration.class);
         when(configConfig.getDisabledInstrumentations()).thenReturn(Collections.singletonList("test"));
@@ -90,6 +90,17 @@ class InstrumentationTest {
         when(configConfig.getDisabledInstrumentations()).thenReturn(List.of());
         ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
         assertThat(interceptMe()).isEqualTo("intercepted");
+    }
+
+    @Test
+    void testReInitDisableAllInstrumentations() {
+        final ConfigurationRegistry config = SpyConfiguration.createSpyConfig();
+        init(config, List.of(new TestInstrumentation()));
+        assertThat(interceptMe()).isEqualTo("intercepted");
+
+        when(config.getConfig(CoreConfiguration.class).isInstrument()).thenReturn(false);
+        ElasticApmAgent.doReInitInstrumentation(List.of(new TestInstrumentation()));
+        assertThat(interceptMe()).isEmpty();
     }
 
     @Test
