@@ -342,11 +342,13 @@ You can use this setting to dynamically disable Elastic APM at runtime.
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
 [float]
 [[config-instrument]]
-==== `instrument`
+==== `instrument` (added[1.0.0,Changing this value at runtime is possible since version 1.15.0])
 
 A boolean specifying if the agent should instrument the application to collect performance metrics for the app. When set to false, Elastic APM will not affect your application at all.
 
 NOTE: Both active and instrument needs to be true for instrumentation to be running.
+
+NOTE: Changing this value at runtime can slow down the application temporarily.
 
 
 [options="header"]
@@ -595,11 +597,13 @@ you should add an additional entry to this list (make sure to also include the d
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
 [float]
 [[config-disable-instrumentations]]
-==== `disable_instrumentations`
+==== `disable_instrumentations` (added[1.0.0,Changing this value at runtime is possible since version 1.15.0])
 
 A list of instrumentations which should be disabled.
 Valid options are `annotations`, `apache-commons-exec`, `apache-httpclient`, `asynchttpclient`, `concurrent`, `elasticsearch-restclient`, `exception-handler`, `executor`, `hibernate-search`, `http-client`, `incubating`, `jax-rs`, `jax-ws`, `jdbc`, `jedis`, `jms`, `jsf`, `kafka`, `lettuce`, `log4j`, `logging`, `mongodb-client`, `mule`, `okhttp`, `opentracing`, `process`, `public-api`, `quartz`, `redis`, `redisson`, `render`, `scheduled`, `servlet-api`, `servlet-api-async`, `servlet-input-stream`, `slf4j`, `spring-mvc`, `spring-resttemplate`, `spring-service-name`, `spring-view-render`, `urlconnection`.
 If you want to try out incubating features, set the value to an empty string.
+
+NOTE: Changing this value at runtime can slow down the application temporarily.
 
 
 [options="header"]
@@ -765,7 +769,7 @@ NOTE: This feature requires APM Server 7.2+
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
 [float]
 [[config-trace-methods]]
-==== `trace_methods` (added[1.3.0,Enhancements in 1.4.0, 1.7.0 and 1.9.0])
+==== `trace_methods` (added[1.0.0,Changing this value at runtime is possible since version 1.15.0])
 
 A list of methods for which to create a transaction or span.
 
@@ -827,6 +831,8 @@ public @@javax.enterprise.context.NormalScope your.application.package.*
 public @@javax.inject.Scope your.application.package.*
 ----
 NOTE: This method is only available in the Elastic APM Java Agent.
+
+NOTE: Changing this value at runtime can slow down the application temporarily.
 
 
 [options="header"]
@@ -2103,6 +2109,8 @@ The default unit for this option is `ms`.
 # A boolean specifying if the agent should instrument the application to collect performance metrics for the app. When set to false, Elastic APM will not affect your application at all.
 # 
 # NOTE: Both active and instrument needs to be true for instrumentation to be running.
+# 
+# NOTE: Changing this value at runtime can slow down the application temporarily.
 #
 # This setting can be changed at runtime
 # Type: Boolean
@@ -2243,6 +2251,8 @@ The default unit for this option is `ms`.
 # A list of instrumentations which should be disabled.
 # Valid options are `annotations`, `apache-commons-exec`, `apache-httpclient`, `asynchttpclient`, `concurrent`, `elasticsearch-restclient`, `exception-handler`, `executor`, `hibernate-search`, `http-client`, `incubating`, `jax-rs`, `jax-ws`, `jdbc`, `jedis`, `jms`, `jsf`, `kafka`, `lettuce`, `log4j`, `logging`, `mongodb-client`, `mule`, `okhttp`, `opentracing`, `process`, `public-api`, `quartz`, `redis`, `redisson`, `render`, `scheduled`, `servlet-api`, `servlet-api-async`, `servlet-input-stream`, `slf4j`, `spring-mvc`, `spring-resttemplate`, `spring-service-name`, `spring-view-render`, `urlconnection`.
 # If you want to try out incubating features, set the value to an empty string.
+# 
+# NOTE: Changing this value at runtime can slow down the application temporarily.
 #
 # This setting can be changed at runtime
 # Type: comma separated list
@@ -2392,6 +2402,8 @@ The default unit for this option is `ms`.
 # public @@javax.inject.Scope your.application.package.*
 # ----
 # NOTE: This method is only available in the Elastic APM Java Agent.
+# 
+# NOTE: Changing this value at runtime can slow down the application temporarily.
 #
 # This setting can be changed at runtime
 # Type: comma separated list
